# raspberry_pi_switch

./: Cargo.toml  Dockerfile  run.sh
crates/flipper/: Cargo.toml
crates/flipper/src/: main.rs  send.rs
crates/switch/: Cargo.toml
crates/switch/src/: index.html  main.rs
src/: app_del.rs  config.rs  lib.rs  main.rs  rabbit.rs  ui_setup.rs  view_state.rs
