[package]
name = "lights"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

[dependencies]
warmy = { version = "0.13", features = ["toml-impl", "arc"] }
serde = { version = "1", features = ["derive"] }
dirs = "2"
amiquip = "0.3.3"

[workspace]
members = [
    "crates/flipper",
    "crates/switch"
]