[package]
name = "flipper"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lights = { path = "../../" }
amiquip = "0.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
codesender = { git = "https://github.com/freemasen/codesender" }